<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_view"
        >
    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
            >
        <LinearLayout
                android:id="@+id/bottom_write_bar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                >

            <EditText
                    android:id="@+id/message"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5sp"
                    android:layout_weight="1"
                    android:hint="@string/lbl_message_chat"
                    android:padding="5sp"
                    android:textColor="@color/textFieldColor" />

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_margin="5sp"
                    android:onClick="sendMessage"
                    android:paddingBottom="5sp"
                    android:paddingLeft="35sp"
                    android:paddingRight="35sp"
                    android:paddingTop="5sp"
                    android:text="@string/lbl_send"
                    android:textColor="@color/White"
                    android:background="@drawable/btn_favorite_background"
                    android:textStyle="bold"
                    android:id="@+id/send_button"
                    />
        </LinearLayout>

        <RelativeLayout xmlns:ProgressWheel="http://schemas.android.com/apk/res-auto"
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="0dip"
                        android:gravity="center"
                        android:id="@+id/loading_info"
                        android:background="@android:color/transparent"
                        android:layout_above="@id/bottom_write_bar"
                        android:layout_alignParentTop="true"
                >
            <com.todddavies.components.progressbar.ProgressWheel
                    android:id="@+id/pw_spinner"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    ProgressWheel:textColor="#222"
                    ProgressWheel:textSize="14sp"
                    ProgressWheel:rimColor="#330097D6"
                    ProgressWheel:barLength="60dp"
                    ProgressWheel:barColor="@color/dark_indigo"
                    ProgressWheel:barWidth="5dp"
                    ProgressWheel:rimWidth="2dp"
                    />
            <ImageView android:layout_width="150dp"
                       android:layout_height="150dp"
                       android:layout_gravity="center"
                       android:src="@drawable/roomme_title"
                       android:padding="15dp"
                    />
        </RelativeLayout>
        <ListView
                android:id="@+id/list_view"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_above="@id/bottom_write_bar"
                android:layout_alignParentTop="true"
                android:cacheColorHint="#00000000"
                android:listSelector="#00000000"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:visibility="gone"
                >
        </ListView>

        <TextView
                android:id="@+id/empty"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@id/bottom_write_bar"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/main_empty_list"
                android:visibility="gone"
                android:textStyle="bold"
                android:textSize="22dp"
                android:textColor="@color/dark_indigo"
                />
    </RelativeLayout>
</RelativeLayout>