<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/back_purple"
              android:padding="15dp">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="vertical"
                >
            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:id="@+id/no_connection"
                          android:visibility="gone">
                <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:id="@+id/imageView"
                        android:src="@drawable/wifi_indigo"
                        android:layout_gravity="center"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_functionality"
                        android:id="@+id/textView"
                        android:gravity="center_vertical|center_horizontal"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:textColor="#FE804D"
                        />
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_description"
                        android:id="@+id/lbl_desc"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        />
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_descripcion"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        />
            </LinearLayout>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_specifications"
                    android:id="@+id/txt_especificaciones"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:textSize="18dp"
                    />
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    >
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight=".5"
                        android:layout_marginTop="5dp">
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_tamano"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="16dp"
                            />
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_plantas"
                            android:paddingBottom="5dp"
                            android:paddingTop="5dp"
                            android:textSize="16dp"
                            />
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_cuartos"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="16dp"
                            />
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_banos"
                            android:paddingTop="5dp"
                            android:textSize="16dp"
                            />
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight=".5"
                        android:layout_marginTop="5dp">
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_cocina"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="16dp"
                            />
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_comedor"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="16dp"
                            />
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_amueblado"
                            android:paddingTop="5dp"
                            android:paddingBottom="5dp"
                            android:textSize="16dp"
                            />
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/txt_estacionamiento"
                            android:paddingTop="5dp"
                            android:textSize="16dp"
                            />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_extras"
                        android:id="@+id/lbl_adicional"
                        android:textStyle="bold"
                        android:textSize="18dp"
                        />
                <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_adicional"
                        android:layout_marginTop="5dp"
                        android:textSize="16dp"
                        />
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5">
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lbl_user_from"
                            android:id="@+id/lbl_user_since"
                            android:textStyle="bold"
                            android:layout_weight=".5"
                            android:textSize="18dp"
                            />
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="New Text"
                            android:id="@+id/txt_user_since"
                            android:paddingTop="5dp"
                            android:textSize="16dp"
                            />
                </LinearLayout>
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5">
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="Última Modificación"
                            android:id="@+id/lbl_modif"
                            android:textStyle="bold"
                            android:layout_weight=".5"
                            android:textSize="18dp"
                            android:visibility="gone"
                            />
                    <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="New Text"
                            android:id="@+id/txt_modif"
                            android:paddingTop="5dp"
                            android:textSize="16dp"
                            android:visibility="gone"
                            />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:orientation="vertical"
                          android:layout_marginTop="10dp"
                          android:id="@+id/linear_comentarios"
                          android:visibility="gone"
                    >
                <TextView android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:text="Comentarios"
                          android:textStyle="bold"
                          android:textSize="18dp"
                        />
                <ListView android:layout_width="fill_parent"
                          android:layout_height="fill_parent"
                          android:id="@+id/list_comments"
                          android:visibility="gone"
                        >
                </ListView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>